--- a/test/about.html
+++ b/test/about.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Обо мне</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?crc=307364086" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?crc=430024194" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=4144356966" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_about.css?crc=90783874" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -66,15 +66,19 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
         </div>
        </div>
       </div>
-      <div class="clearfix grpelem shared_content" id="u8244-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u8244-4_content"><!-- content -->
-       <p class="shared_content" data-content-guid="u8244-4_0_content">Привет, меня зовут Тимофей, мне 22 года. Живу в городе Пионерский, Калининградской области. С детства увлекаюсь компьютерной графикой. Большую часть времени уделяю веб-дизайну и разработке сайтов. Создаю векторные иллюстрации, а после люблю их анимировать. Владею большинством софта от Adobe: Photoshop, Illustrator, Indesign, Muse, After Effects, Premiere Pro. Мои увлечения: видео, анимация, фотография.</p>
+      <div class="clearfix grpelem shared_content" id="u8244-10" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u8244-10_content"><!-- content -->
+       <p class="shared_content" data-content-guid="u8244-10_0_content">Привет, меня зовут Тимофей, мне 22 года. Живу в городе Пионерский, Калининградской области.</p>
+       <p class="shared_content" data-content-guid="u8244-10_1_content">&nbsp;</p>
+       <p class="shared_content" data-content-guid="u8244-10_2_content">С детства увлекаюсь компьютерной графикой. Большую часть времени уделяю веб-дизайну и разработке сайтов. Создаю векторные иллюстрации, а после люблю их анимировать.</p>
+       <p class="shared_content" data-content-guid="u8244-10_3_content">&nbsp;</p>
+       <p class="shared_content" data-content-guid="u8244-10_4_content">Владею большинством софта от Adobe: Photoshop, Illustrator, Indesign, Muse, After Effects, Premiere Pro. Мои увлечения: видео, анимация, фотография.</p>
       </div>
      </div>
      <div class="clearfix colelem shared_content" id="u52510-5" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u52510-5_content"><!-- content -->
       <p><a class="nonblock" href="assets/%d0%bc%d0%b0%d0%bb%d0%b0%d1%85%d0%be%d0%b2-%d1%82%d0%b8%d0%bc%d0%be%d1%84%d0%b5%d0%b9---%d1%80%d0%b5%d0%b7%d1%8e%d0%bc%d0%b5.pdf" target="_blank">Загрузить резюме</a></p>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="631" data-content-above-spacer="630" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="703" data-content-above-spacer="702" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem shared_content" id="pu380" data-content-guid="pu380_content"><!-- group -->
      <div class="browser_width grpelem" id="u380-bw">
       <div id="u380"><!-- group -->
@@ -134,10 +138,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u8244-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u8244-10_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u52510-5_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer shared_content" data-offset-top="590" data-content-above-spacer="589" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
+    <div class="verticalspacer shared_content" data-offset-top="662" data-content-above-spacer="661" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft" data-content-guid="page_1_content"></div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu380_content"><!-- placeholder node --></span>
    </div>
   </div>
@@ -164,7 +168,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
        </div>
       </div>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u8244-4_content"><!-- placeholder node --></span>
+     <span class="clearfix colelem placeholder" data-placeholder-for="u8244-10_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u52510-5_content"><!-- placeholder node --></span>
     </div>
     <span class="verticalspacer placeholder" data-placeholder-for="page_1_content"><!-- placeholder node --></span>
@@ -197,33 +201,37 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_570" data-max-width="570"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu6796"><!-- column -->
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu6796"><!-- group -->
-      <span class="browser_width grpelem placeholder" data-placeholder-for="u6796-bw_content"><!-- placeholder node --></span>
-      <div class="browser_width grpelem temp_no_id" data-orig-id="u6752-bw">
-       <div class="gradient temp_no_id" data-orig-id="u6752"><!-- column -->
-        <div class="clearfix temp_no_id" data-orig-id="u6752_align_to_page">
-         <div class="position_content temp_no_id" data-orig-id="u6752_position_content">
-          <div class="clearfix colelem temp_no_id" data-orig-id="paccordionu5458"><!-- group -->
-           <ul class="AccordionWidget clearfix grpelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="accordionu5458"><!-- vertical box -->
-            <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5464-3"><!-- content --><span class="placeholder" data-placeholder-for="u5464-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="index.html" data-orig-id="u5512"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5515-4"><!-- content --><span class="placeholder" data-placeholder-for="u5515-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem temp_no_id" href="about.html" data-orig-id="u5519"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5522-4"><!-- content --><span class="placeholder" data-placeholder-for="u5522-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="contacts.html" data-orig-id="u24856"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u24857-4"><!-- content --><span class="placeholder" data-placeholder-for="u24857-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
-           </ul>
-           <span class="grpelem placeholder" data-placeholder-for="u5920_content"><!-- placeholder node --></span>
-           <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
-          </div>
-          <span class="clearfix colelem placeholder" data-placeholder-for="u6976-4_content"><!-- placeholder node --></span>
-          <span class="museBGSize rounded-corners colelem placeholder" data-placeholder-for="u8036_content"><!-- placeholder node --></span>
+    <div class="clearfix grpelem temp_no_id" data-orig-id="pu6796"><!-- group -->
+     <span class="browser_width grpelem placeholder" data-placeholder-for="u6796-bw_content"><!-- placeholder node --></span>
+     <div class="browser_width grpelem temp_no_id" data-orig-id="u6752-bw">
+      <div class="gradient temp_no_id" data-orig-id="u6752"><!-- column -->
+       <div class="clearfix temp_no_id" data-orig-id="u6752_align_to_page">
+        <div class="position_content temp_no_id" data-orig-id="u6752_position_content">
+         <div class="clearfix colelem temp_no_id" data-orig-id="paccordionu5458"><!-- group -->
+          <ul class="AccordionWidget clearfix grpelem temp_no_id" data-visibility="changed" style="visibility:hidden" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="accordionu5458"><!-- vertical box -->
+           <li class="AccordionPanel clearfix colelem temp_no_id" data-orig-id="u5463"><!-- vertical box --><div class="AccordionPanelTab transition clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5464-3"><!-- content --><span class="placeholder" data-placeholder-for="u5464-3_0_content"><!-- placeholder node --></span></div><div class="AccordionPanelContent disn clearfix colelem temp_no_id" data-orig-id="u5465"><!-- group --><nav class="MenuBar clearfix grpelem temp_no_id" data-orig-id="menuu5510"><!-- vertical box --><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5511"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="index.html" data-orig-id="u5512"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5515-4"><!-- content --><span class="placeholder" data-placeholder-for="u5515-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u5518"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu MuseMenuActive clearfix grpelem temp_no_id" href="about.html" data-orig-id="u5519"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u5522-4"><!-- content --><span class="placeholder" data-placeholder-for="u5522-4_0_content"><!-- placeholder node --></span></div></a></div><div class="MenuItemContainer clearfix colelem temp_no_id" data-orig-id="u24853"><!-- horizontal box --><a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem temp_no_id" href="contacts.html" data-orig-id="u24856"><!-- horizontal box --><div class="MenuItemLabel clearfix grpelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u24857-4"><!-- content --><span class="placeholder" data-placeholder-for="u24857-4_0_content"><!-- placeholder node --></span></div></a></div></nav></div></li>
+          </ul>
+          <span class="grpelem placeholder" data-placeholder-for="u5920_content"><!-- placeholder node --></span>
+          <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
          </div>
+         <div class="clearfix colelem" id="u55568-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
+          <p>Немного о себе</p>
+         </div>
+         <span class="museBGSize rounded-corners colelem placeholder" data-placeholder-for="u8036_content"><!-- placeholder node --></span>
+         <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u8244-10"><!-- content -->
+          <span class="placeholder" data-placeholder-for="u8244-10_0_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u8244-10_1_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u8244-10_2_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u8244-10_3_content"><!-- placeholder node --></span>
+          <span class="placeholder" data-placeholder-for="u8244-10_4_content"><!-- placeholder node --></span>
+         </div>
+         <span class="clearfix colelem placeholder" data-placeholder-for="u52510-5_content"><!-- placeholder node --></span>
         </div>
        </div>
       </div>
      </div>
-     <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u8244-4"><!-- content -->
-      <span class="placeholder" data-placeholder-for="u8244-4_0_content"><!-- placeholder node --></span>
-     </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u52510-5_content"><!-- placeholder node --></span>
     </div>
-    <div class="verticalspacer" data-offset-top="652" data-content-above-spacer="651" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="586" data-content-above-spacer="586" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
