--- a/test/alk-lp.html
+++ b/test/alk-lp.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Веб-сайт для ПКП Альк</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/alk-lp.css?crc=332330962" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/alk-lp.css?crc=59376736" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_alk-lp.css?crc=4021040652" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_alk-lp.css?crc=4113742461" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -64,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <p class="shared_content" data-content-guid="u10998-4_0_content">Веб-дизайн</p>
           </div>
           <div class="clearfix colelem shared_content" id="u10989-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u10989-4_content"><!-- content -->
-           <p class="shared_content" data-content-guid="u10989-4_0_content">Веб-сайт для ПКП «Альк»</p>
+           <p>Веб-сайт для ПКП «Альк»</p>
           </div>
           <div class="shadow rounded-corners project-pic museBGSize colelem shared_content" id="u10939" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u10939_content"><!-- simple frame --></div>
          </div>
@@ -266,16 +266,16 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u10998-4"><!-- content -->
            <span class="placeholder" data-placeholder-for="u10998-4_0_content"><!-- placeholder node --></span>
           </div>
-          <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u10989-4"><!-- content -->
-           <span class="placeholder" data-placeholder-for="u10989-4_0_content"><!-- placeholder node --></span>
+          <div class="clearfix colelem" id="u58593-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+           <p>Веб-сайт для ПКП «Альк»</p>
           </div>
           <span class="shadow rounded-corners project-pic museBGSize colelem placeholder" data-placeholder-for="u10939_content"><!-- placeholder node --></span>
+          <span class="clearfix colelem placeholder" data-placeholder-for="u19158-5_content"><!-- placeholder node --></span>
          </div>
         </div>
        </div>
       </div>
      </div>
-     <span class="clearfix colelem placeholder" data-placeholder-for="u19158-5_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u10948-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u10948-4_0_content"><!-- placeholder node --></span>
      </div>
@@ -307,7 +307,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/proof.jpg?crc=490859725" alt="" data-heightwidthratio="0.2641509433962264" data-image-width="530" data-image-height="140" data-orig-id="u16371_img" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2283" data-content-above-spacer="2282" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="2197" data-content-above-spacer="2196" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
