--- a/test/book-ico.html
+++ b/test/book-ico.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Книга «Правила успешного инвестирования в ICO»</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/book-ico.css?crc=508149523" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/book-ico.css?crc=306086657" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_book-ico.css?crc=4208416206" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_book-ico.css?crc=4157425650" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -221,8 +221,11 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   </div>
   <div class="breakpoint" id="bp_570" data-max-width="570"><!-- responsive breakpoint node -->
    <div class="clearfix borderbox temp_no_id" data-orig-id="page"><!-- group -->
-    <div class="clearfix grpelem temp_no_id" data-orig-id="ppu37706"><!-- column -->
-     <div class="clearfix colelem temp_no_id" data-orig-id="pu37706"><!-- group -->
+    <div class="clearfix grpelem" id="ppu58196-4"><!-- column -->
+     <div class="clearfix colelem" id="pu58196-4"><!-- group -->
+      <div class="clearfix grpelem" id="u58196-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
+       <p>Книга «Правила успешного инвестирования в ICO»</p>
+      </div>
       <span class="browser_width grpelem placeholder" data-placeholder-for="u37706-bw_content"><!-- placeholder node --></span>
       <div class="browser_width grpelem temp_no_id" data-orig-id="u37710-bw">
        <div class="gradient temp_no_id" data-orig-id="u37710"><!-- column -->
@@ -236,13 +239,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
           </div>
           <span class="clearfix colelem placeholder" data-placeholder-for="u37702-4_content"><!-- placeholder node --></span>
-          <span class="clearfix colelem placeholder" data-placeholder-for="u37698-4_content"><!-- placeholder node --></span>
+          <span class="shadow rounded-corners project-pic museBGSize colelem placeholder" data-placeholder-for="u37703_content"><!-- placeholder node --></span>
          </div>
         </div>
        </div>
       </div>
      </div>
-     <span class="shadow rounded-corners project-pic museBGSize colelem placeholder" data-placeholder-for="u37703_content"><!-- placeholder node --></span>
      <span class="clearfix colelem placeholder" data-placeholder-for="u37699-5_content"><!-- placeholder node --></span>
      <div class="clearfix colelem temp_no_id" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-orig-id="u37716-4"><!-- content -->
       <span class="placeholder" data-placeholder-for="u37716-4_0_content"><!-- placeholder node --></span>
@@ -257,7 +259,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <img class="block temp_no_id temp_no_img_src" data-orig-src="images/book-pic2.jpg?crc=500582485" alt="" data-heightwidthratio="0.7660377358490567" data-image-width="530" data-image-height="406" data-orig-id="u38472_img" src="images/blank.gif?crc=4208392903"/>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1640" data-content-above-spacer="1640" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1493" data-content-above-spacer="1493" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
