--- a/test/contacts.html
+++ b/test/contacts.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Контакты</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=332244779"/>
-  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=214073968" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_b-master.css?crc=3912660930"/>
+  <link rel="stylesheet" type="text/css" href="css/contacts.css?crc=260180347" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=3885030934"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_contacts.css?crc=4137362544" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_b-master.css?crc=231676787"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_contacts.css?crc=491632198" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -58,7 +58,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           </div>
          </nav>
          <div class="clearfix colelem shared_content" id="u24816-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u24816-4_content"><!-- content -->
-          <p class="shared_content" data-content-guid="u24816-4_0_content">Пишите или звоните, я всегда на связи!</p>
+          <p>Пишите или звоните, я всегда на связи!</p>
          </div>
          <div class="clearfix colelem shared_content" id="u26483-4" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u26483-4_content"><!-- content -->
           <p class="shared_content" data-content-guid="u26483-4_0_content">Ну, если только я не сплю в своей кроватке.</p>
@@ -286,8 +286,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <span class="grpelem placeholder" data-placeholder-for="u28623_content"><!-- placeholder node --></span>
           <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u28674_content"><!-- placeholder node --></span>
          </div>
-         <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u24816-4"><!-- content -->
-          <span class="placeholder" data-placeholder-for="u24816-4_0_content"><!-- placeholder node --></span>
+         <div class="clearfix colelem" id="u55946-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+          <p>Пишите или звоните, я всегда на связи!</p>
          </div>
          <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u26483-4"><!-- content -->
           <span class="placeholder" data-placeholder-for="u26483-4_0_content"><!-- placeholder node --></span>
@@ -346,7 +346,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="530" data-content-above-spacer="530" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <span class="clearfix grpelem placeholder" data-placeholder-for="pu28745_content"><!-- placeholder node --></span>
    </div>
   </div>
