--- a/test/fastfood-animation.html
+++ b/test/fastfood-animation.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Шевелю Фастфуд | Векторный бургер</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=4269536274" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/fastfood-animation.css?crc=4168850157" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=490209657" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_fastfood-animation.css?crc=4218158206" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -261,7 +261,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <span class="nonblock nontext transition clip_frame grpelem placeholder" data-placeholder-for="u115_content"><!-- placeholder node --></span>
          </div>
          <span class="clearfix colelem placeholder" data-placeholder-for="u17363-4_content"><!-- placeholder node --></span>
-         <span class="clearfix colelem placeholder" data-placeholder-for="u17355-4_content"><!-- placeholder node --></span>
+         <div class="clearfix colelem" id="u59604-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter"><!-- content -->
+          <p>Шевелю Фастфуд</p>
+         </div>
          <div class="museBGSize shadow rounded-corners pics colelem" id="u21694"><!-- custom html -->
           <iframe width="320" height="320" src="https://www.youtube.com/embed/zExb5-0tOzY?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
          </div>
@@ -301,7 +303,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="2850" data-content-above-spacer="2850" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="2755" data-content-above-spacer="2755" data-content-below-spacer="249" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
