--- a/test/index.html
+++ b/test/index.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Портфолио</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=3840786580" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=244359677" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=526450327" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_index.css?crc=500813031" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -160,7 +160,7 @@ transform-origin: 50% 50%;
           <div class="fluid_height_spacer"></div>
          </div>
          <a class="nonblock nontext project-pic shadow museBGSize grpelem" id="u17615" href="book-ico.html"><!-- simple frame --><div class="fluid_height_spacer"></div></a>
-         <div class="project-pic shadow grpelem" id="u17606"><!-- simple frame -->
+         <div class="project-pic shadow museBGSize grpelem" id="u17606"><!-- simple frame -->
           <div class="fluid_height_spacer"></div>
          </div>
         </div>
@@ -427,7 +427,7 @@ html { background: url(assets/) #000 no-repeat center center fixed; }
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="fastfood-animation-copy.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u4411"><!-- simple frame --></a>
          <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17622"><!-- simple frame --></div>
          <a class="nonblock nontext project-pic shadow museBGSize colelem temp_no_id" href="book-ico.html" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17615"><!-- simple frame --></a>
-         <div class="project-pic shadow colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
+         <div class="project-pic shadow museBGSize colelem temp_no_id" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-orig-id="u17606"><!-- simple frame --></div>
         </div>
        </div>
       </div>
