--- a/test/sportblend-lp.html
+++ b/test/sportblend-lp.html
@@ -17,12 +17,12 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Лендинг пейдж для Sportblend</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4022983561"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=3893517318"/>
-  <link rel="stylesheet" type="text/css" href="css/sportblend-lp.css?crc=114555600" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?crc=4127617501"/>
+  <link rel="stylesheet" type="text/css" href="css/sportblend-lp.css?crc=3981502293" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=4254629761"/>
-  <link rel="stylesheet" type="text/css" href="css/nomq_sportblend-lp.css?crc=3942098700" id="nomq_pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_preview_master_a-master.css?crc=3785605102"/>
+  <link rel="stylesheet" type="text/css" href="css/nomq_sportblend-lp.css?crc=3977198988" id="nomq_pagesheet"/>
   <![endif]-->
   <!-- JS includes -->
   <!--[if lt IE 9]>
@@ -64,7 +64,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
            <p class="shared_content" data-content-guid="u46864-4_0_content">Веб-дизайн</p>
           </div>
           <div class="clearfix colelem shared_content" id="u46869-4" data-sizePolicy="fluidWidth" data-pintopage="page_fixedCenter" data-content-guid="u46869-4_content"><!-- content -->
-           <p class="shared_content" data-content-guid="u46869-4_0_content">Лэндинг пейдж для Sportblend</p>
+           <p>Лэндинг пейдж для Sportblend</p>
           </div>
           <div class="shadow rounded-corners project-pic museBGSize colelem shared_content" id="u46867" data-sizePolicy="fixed" data-pintopage="page_fixedCenter" data-content-guid="u46867_content"><!-- simple frame --></div>
          </div>
@@ -235,8 +235,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
           <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u46864-4"><!-- content -->
            <span class="placeholder" data-placeholder-for="u46864-4_0_content"><!-- placeholder node --></span>
           </div>
-          <div class="clearfix colelem temp_no_id" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true" data-orig-id="u46869-4"><!-- content -->
-           <span class="placeholder" data-placeholder-for="u46869-4_0_content"><!-- placeholder node --></span>
+          <div class="clearfix colelem" id="u59362-4" data-muse-temp-textContainer-sizePolicy="true" data-muse-temp-textContainer-pinning="true"><!-- content -->
+           <p>Лэндинг пейдж для Sportblend</p>
           </div>
           <span class="shadow rounded-corners project-pic museBGSize colelem placeholder" data-placeholder-for="u46867_content"><!-- placeholder node --></span>
          </div>
@@ -255,7 +255,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <div class="fluid_height_spacer"></div>
      </div>
     </div>
-    <div class="verticalspacer" data-offset-top="1206" data-content-above-spacer="1206" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
+    <div class="verticalspacer" data-offset-top="1123" data-content-above-spacer="1123" data-content-below-spacer="248" data-sizePolicy="fixed" data-pintopage="page_fixedLeft"></div>
     <div class="clearfix grpelem temp_no_id" data-orig-id="pu380"><!-- group -->
      <div class="browser_width grpelem temp_no_id" data-orig-id="u380-bw">
       <div class="temp_no_id" data-orig-id="u380"><!-- column -->
